# 16833_hw

./: .gitignore
hw1/code/: dummy_test.py  environment.yaml  main.py  map_reader.py  motion_model.py  resampling.py  sensor_model.py
hw2/code/: ekf_slam.py
hw2/writeup/: writeup.aux  writeup.tex
hw3/: tips_for_students.md
hw3/code/: linear.py  nonlinear.py  pyproject.toml  solvers.py
hw3/tex/: writeup_16833_HW3_SOLVERS.aux  writeup_16833_HW3_SOLVERS.out  writeup_16833_HW3_SOLVERS.tex
hw4/: tips_for_students.md
hw4/code/: fusion.py  icp.py  main.py  preprocess.py  pyproject.toml  utils.py
hw4/writeup/: writeup.aux  writeup.tex
